<resources>
    <string name="app_name">DrugTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    login fragment-->
    <string name="login_button">Log In</string>
    <string name="login_heading">Login</string>
    <string name="password_text">Create a password</string>
    <string name="password_hint">***************</string>
    <string name="email_text">Email</string>
    <string name="email_hint">example@gmail.com</string>

    <!--    signup fragment-->
    <string name="name_hint">Alice</string>
    <string name="name_text">Name</string>
    <string name="create_new_account">Create New Account</string>

    <!--    welcome fragment-->
    <string name="already_have_an_account">I already have an account</string>

<!--    My Medication fragment-->
    <string name="my_medications">My Medications</string>

<!--    search fragment-->
    <string name="search_hint">Search Medication</string>
    <string name="search">Search</string>

    <!--    medication detail fragment-->
    <string name="back">Back</string>
    <string name="details">Details</string>
    <string name="generic_name">Generic Name</string>
    <string name="add_btn">Add Medication to List</string>
    <string name="tablet_data">"Tablet:\n\n  • Adult: 1-2 tablets every 4 to 6 hours up to a maximum of 4 gm (8 tablets) daily...\n• Children (6-12 years): ½ to 1 tablet 3 to 4 times daily...\nExtended Release Tablet:\n• Adults &amp; Children over 12 years:..."</string>


</resources>